Updated. This will be Version 2 RC 1

--- a/trunk/website/index.html
+++ b/trunk/website/index.html
@@ -9,7 +9,7 @@
 <body>
 	<div id="ar-wrapper">
 		<div id="ar-header">
-			<h1><a href="http://ardb.sabbatinfrance.org/">Ardb: The Vtes player swiss knife</a></h1>
+			<h1><a href="http://ardb.sabbatinfrance.org/">Ardb: The Vtes players swiss army knife</a></h1>
 			<ul>
 				<li id="ar-download"><a href="http://code.google.com/p/ardb/downloads/list">Download</a></li>
 				<li><a href="http://code.google.com/p/ardb/wiki/DevelopmentRoadmap">Roadmap</a></li>
@@ -29,9 +29,9 @@
 					card game of Gothic intrigue based on White Wolf's storytelling game <b>Vampire: The Masquerade</b>. 
 				</p>
 				<p>				
-					Enter a world of majestry and mystery as you assume the role of ancient vampire. 
-					As your minions descend into a passionate maelstrom of relentless politics and nefarious conspiracies, 
-					you must wage war against your opponents, drain their precious resources, and master the societies 
+					Enter a world of majestry and mystery as you assume the role of an ancient vampire. 
+					As your minions descend into a passionate maelstrom of relentless politics and nefarious conspiracies 
+					you must wage war against your opponents.   Draining their precious resources while mastering the societies 
 					of the living and the undead. The game is designed for two or more players; each player needs a deck to play. 
 					The complete set contains over four hundred cards and features full color illustrations by some of the 
 					genre's most prominent artists. Join the Eternal Struggle, where blood is your weakness... and your ultimate weapon!
